# rtool

./: Cargo.toml  readme.md
src/: cdiff.rs  fnote.rs  main.rs
