[package]
name = "rtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
collapse = "0.1.2"
lazy_static = "1.4.0"
lol_html = "0.4.0"
regex = "1.8.2"
scraper = "0.16.0"
subprocess = "0.2.9"
textdistance = "1.0.1"
